--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -175,7 +175,7 @@
         <item quantity="one">1 segundo</item>
         <item quantity="other">%d segundos</item>
     </plurals>
-    <string name="pref_camera_timer_sound_default">@string/Configurando_no_valor</string>
+    <string name="pref_camera_timer_sound_default">Configurando_no_valor</string>
     <!-- Text followed by a checkbox to turn on/off sound effects during the countdown. [CHAR LIMIT = 24]-->
     <string name="pref_camera_timer_sound_title">Apitar durante a contagem regressiva</string>
     <!-- Entry of camera save path -->
