--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -323,9 +323,9 @@
     <!--  menu label exposure compensation [CHAR LIMIT=50] -->
     <string name="pref_exposure_label">Exposição</string>
     <!-- Default HDR entry value -->
-    <string name="pref_camera_hdr_default">@string/Configurando_no_valor</string>
+    <string name="pref_camera_hdr_default">Configurando_no_valor</string>
     <!-- Default HDR+ entry value -->
-    <string name="pref_camera_hdr_plus_default">@string/Configurando_no_valor</string>
+    <string name="pref_camera_hdr_plus_default">Configurando_no_valor</string>
     <!-- HDR label ON [CHAR LIMIT=60] -->
     <string name="pref_camera_hdr_label">HDR</string>
     <!-- switch camera label back [CHAR LIMIT=60] -->
